--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Usage: ./pio -s src -d dst -c chunksize [-n newname]
 src: source file name
 dst: destination file name
 chunksize: how large a chunk to transmit for each bcast, by default it is 1MB.
-newname (optional): add .rx (where x is the rank id) to the dst, useful when all nodes share a global file system
+newname (optional): add .rx (where x is the rank id) to the dst, useful when all nodes share a global file system (when testing ;))
